--- a/templates/student/submitB.html
+++ b/templates/student/submitB.html
@@ -80,7 +80,7 @@
    <input id="screenshot{{index}}" name="screenshot" type="hidden" value="" /><BR> 
   </div>                 
 <div class="form-group">           
-        <input id="submit" type="submit" value="送出" />
+        <input id="submit" type="submit" class="btn-info" value="送出" />
 </div>
             </form>
         <br>
