--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -108,8 +108,8 @@
       <ul>
         <li><a href="/account/about">關於我們</a></li>        
         <li><a href="/account/visitor">網站使用手冊</a></li>           
-        <li><a href="#">課程瀏覽人次統計</a></li>
-        <li><a href="/account/statics">分區數據統計</a></li>
+        <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
+        <li><a href="/account/statics/zone">分區數據統計</a></li>
         <li><a href="/account/visitor">使用者登入統計</a></li>
         <li><a href="http://www.books.com.tw/products/0010703424" target="_blank">參考圖書</a></li>          
         <li><a href="/account/visitor">連絡我們</a></li>        
