--- a/templates/account/statics_login.html
+++ b/templates/account/statics_login.html
@@ -41,7 +41,7 @@
             </tr>
         {% for visitor in visitors %}
             <tr>
-            <td>{% if user.is_authenticated %}<a href="/account/visitorlog/{{visitor.3.id}}">{% endif %}{{visitor.3.date}}--{{visitor.3.date|week}}{% if not user.is_authenticated %}</a>{% endif %}</td>
+            <td>{% if user.is_authenticated %}<a href="/account/statics/login/log/{{visitor.3.id}}">{% endif %}{{visitor.3.date}}--{{visitor.3.date|week}}{% if not user.is_authenticated %}</a>{% endif %}</td>
             <td>{{visitor.3.count}}</td>
             </tr>
         {% endfor %}
