--- a/templates/student/lesson/B05.html
+++ b/templates/student/lesson/B05.html
@@ -116,7 +116,7 @@
 </td></tr></table></div>
 
   <BR>執行結果</BR>
-  <img src="/static/lesson/B0702.png">
+  <img src="/static/lesson/vphysics/B0702.png">
   <BR><BR>
     
 <h1>
@@ -124,6 +124,6 @@
     </h1>
     
 請在上面的向量中，加入文字標籤顯示向量值，如下圖<BR>提示：str(vector)可以將向量轉換成文字資料型態<BR>
-    <img src="/static/lesson/B0703.png">
+    <img src="/static/lesson/vphysics/B0703.png">
 	
 <BR><BR>
