--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -1645,4 +1645,5 @@
   </div>
 </section>
 {% endif %}
+<BR>本單元課程自2018.7.1日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次
 {% endblock %}
