--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -255,4 +255,5 @@ function MM_swapImage() { //v3.0
   </table> 
 <img src="/static/images/euler/certificate.png">	
 {% endif %}
+<BR>本單元課程自2018.7.1日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
 {% endblock %}
