--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -101,7 +101,7 @@
       <br />小貓：要不要去一家義大利餐廳吃？
     </div>
     <div class="tab-pane fade show" id="tab2" role="tabpanel">
-      <a href="/static/file/dialog.zip">下載</a>
+      <a href="/static/files/scratch/dialog.zip">下載</a>
     </div>
     <div class="tab-pane fade show" id="tab3" role="tabpanel">
       <iframe width="900" height="520" src="https://www.youtube.com/embed/7siMzGSbjUk?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
