--- a/templates/account/contact.html
+++ b/templates/account/contact.html
@@ -5,14 +5,15 @@
 <img class="imgl" src="/static/images/about/jean2014.png">
 
 <div class="card">
-  <h5 class="card-header">高慧君(臺北市立南港高中)</h5>
+  <h5 class="card-header">高慧君(臺北市立南港高中資訊教師)</h5>
   <div class="card-body">
     <h5 class="card-title">連絡方式</h5>
     <p class="card-text">
         <Table class="table" style="width:100%">     
     <Tr>
       <td>Email</td><td>koma@mail.nksh.tp.edu.tw</td></Tr>    
-    <Tr><td>Facebook</td><td>https://www.facebook.com/ntnujean</td></Tr>    	
+    <Tr><td>Facebook</td><td>https://www.facebook.com/ntnujean</td></Tr>   
+    <Tr><td>LineID</td><td>huechingkao</td></Tr>            
   </Table>
     </p>
   </div>
@@ -22,7 +23,7 @@
 <img class="imgl" src="/static/images/about/dinowei.png">
 
 <div class="card">
-  <h5 class="card-header">魏仲良(臺北市立大直高中)</h5>
+  <h5 class="card-header">魏仲良(臺北市立大直高中圖書館主任)</h5>
   <div class="card-body">
     <h5 class="card-title">連絡方式</h5>
     <p class="card-text">
@@ -30,6 +31,20 @@
     <Tr>
       <td>Email</td><td>dreamer@dcsh.tp.edu.tw</td></Tr>    
     <Tr><td>Facebook</td><td>https://www.facebook.com/idreamer.tw</td></Tr>    	
+  </Table>
+    </p>
+  </div>
+</div>
+  
+<BR>
+<img class="imgl" src="/static/images/about/yuan.png">
+<div class="card">
+  <h5 class="card-header">賴錦緣(國立臺中科技大學通識中心教授)</h5>
+  <div class="card-body">
+    <h5 class="card-title">連絡方式</h5>
+    <p class="card-text">
+        <Table class="table" style="width:100%">
+ <Tr><td>Email</td><td>yuanlai@nutc.edu.tw</td></Tr>      	   	
   </Table>
     </p>
   </div>
