--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -74,8 +74,7 @@
 <BR><BR>
   <div class="wrapper">
   <div id="header">
-    <h1>Joy of Code</h1>
-    <p></p>
+    <img src="/static/images/header.png">
   </div>
 </div>
 <!-- ####################################################################################################### -->
