--- a/templates/student/submitA.html
+++ b/templates/student/submitA.html
@@ -36,7 +36,7 @@ function checkvalue() {
  
 <script type="text/javascript">   
 var flashvars = {
-project: "/static/work/{{request.user.id}}/{{work_dict|hash_file:index}}" ,
+project: "/static/work/scratch/{{request.user.id}}/{{work_dict|hash_file:index}}" ,
 autostart: "false"
 };
 var params = {
