--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@ jQuery(function () {
     $('form>p').addClass('form-group form-inline');
     $('form>p>input').addClass('form-control');  
     $('form>p>select').addClass('form-control'); 
+    $('form>p>textarea').addClass('form-control');   
     $('td>select').addClass('form-control'); 	
     $('td>input').addClass('form-control');  		
 	  $('input').addClass('form-control'); 
