--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -165,7 +165,8 @@
   
 {% block footer_script %}
 <script>
-var slideIndex = Math.floor(Math.random() * Math.floor(3));
+//var slideIndex = Math.floor(Math.random() * Math.floor(3));
+var slideIndex = 1
 showSlides(slideIndex);
 
 function plusSlides(n) {
