--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@ jQuery(function () {
       {% else %}
         <li><a href="/account/register_school" class="btn">註冊新學校</a></li>
       <li><a href="/account/register" class="btn">註冊新帳號</a></li>
-      <li><a href="/account/login/0/" class="btn">教師登入</a></li>
+      <li><a href="/account/login/0/" class="btn">登入</a></li>
       <li><a href="/account/login/1/" class="btn">學生登入</a></li>				
       {% endif %}
     </ul>  
