--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -105,8 +105,8 @@
     <div class="footbox">
       <h2>關於本站</h2>
       <ul>
-        <li><a href="/account/about">關於我們</a></li>        
-        <li><a href="/account/visitor">網站使用手冊</a></li>           
+        <li><a href="/account/author">作者</a></li>          
+        <li><a href="/account/about">網站開發人員</a></li>               
         <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
         <li><a href="/account/statics/zone">分區數據統計</a></li>
         <li><a href="/account/statics/login/">使用者登入統計</a></li>
