--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -192,8 +192,8 @@ function MM_swapImage() { //v3.0
 {% elif subject_id == "B" %}
 <img src="/static/images/vphysics/vphysics.png">
 <BR><BR>
-<a href="/static/lesson/VPhysics高中課程.pdf" role="button" class="btn">石明豐教授編寫的課程文件(pdf,5.28MB)</a>
-<a href="http://vphysics.ntu.edu.tw" target=_blank role="button" class="btn">更多VPhysics課程</a>
+<a href="/static/lesson/VPhysics高中課程.pdf" role="button" class="btn btn-info">石明豐教授編寫的課程文件(pdf,5.28MB)</a>
+<a href="http://vphysics.ntu.edu.tw" target=_blank role="button" class="btn btn-info">更多VPhysics課程</a>
 		<table style="border:0px; width:900px;">
   <tr>
   <td>
@@ -223,7 +223,7 @@ function MM_swapImage() { //v3.0
 <img src="/static/images/vphysics/certificate.png">
 {% elif subject_id == "C" %}
 <img src="/static/images/euler/euler.png"><BR>
-  <a href="https://projecteuler.net/" target="_blank" role="button" class="btn">前往尤拉計畫解題網站</a>
+  <a href="https://projecteuler.net/" target="_blank" role="button" class="btn btn-info">前往尤拉計畫解題網站</a>
 		<table style="border:0px; width:900px;">    
   <tr>
 <td>  
