--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@ jQuery(function () {
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="copyright">
-		<p class="fl_left">Copyright &copy; All Rights Reserved </p>
+		<p class="fl_left">Copyright &copy; All Rights Reserved <a href="/account/policies">使用條款</a></p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>
 		Designed by <a href='http://www.freepik.com'>Freepik</a></p>
 		</p>
