--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -68,6 +68,9 @@
 
 /* Add a blue color to the author */
 .author {color: cornflowerblue;}
+  
+  #summary {position: relative; padding: 0}
+  #summary>div {position: absolute; bottom: 21px; width: 219px; line-height: 37px; text-align: center}
 </style>
 {% endblock %}
 {% block banner %}
@@ -106,12 +109,12 @@
       <h2>關於本站</h2>
       <ul>
         <li><a href="/account/author">作者</a></li>          
-        <li><a href="/account/about">網站開發人員</a></li>               
+        <li><a href="/account/about">網站開發人員</a></li>   
+        <li><a href="/account/manual">網站使用手冊</a></li>           
         <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
         <li><a href="/account/statics/zone">分區數據統計</a></li>
         <li><a href="/account/statics/login/">使用者登入統計</a></li>
-        <li><a href="http://www.books.com.tw/products/0010703424" target="_blank">參考圖書</a></li>          
-        <li><a href="/account/policies">使用條款</a></li>          
+        <li><a href="http://www.books.com.tw/products/0010703424" target="_blank">參考圖書</a></li>           
         <li><a href="/account/contact">連絡我們</a></li>        
       </ul>
     </div>
@@ -167,25 +170,26 @@
 <div class="wrapper">
   <div class="container">
     <div class="whitebox">
-      <div class="content">        
+      <div class="content">
         <h1>在 Joy of Code 上學習</h1>
         {{student}} 個學生在這兒撰寫了 {{works.0}} 個程式。
-  <img src="/static/images/work.png">
-<div>
-{{works.1.0}}  班次共 {{works.1.1}} 個作業
-</div>
-<div>
-{{works.2.0}}  班次共 {{works.2.1}} 個作業
-</div>
-<div>
-{{works.3.0}}  班次共 {{works.3.1}} 個作業
-</div>        
-       </div>
+        <div id="summary">
+          <img src="/static/images/work.png">
+          <div style="left:27px">
+            {{works.1.0}} 班次共 {{works.1.1}} 個作業
+          </div>
+          <div style="left:333px">
+            {{works.2.0}} 班次共 {{works.2.1}} 個作業
+          </div>
+          <div style="left:646px">
+            {{works.3.0}} 班次共 {{works.3.1}} 個作業
+          </div>
+        </div>
+      </div>
       <div class="clear"></div>
     </div>
   </div>
-</div>     
-{% endblock %}
+</div>{% endblock %}
   
 {% block footer_script %}
 <script>
