--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -24,20 +24,34 @@
     <h5 class="card-title">經歷</h5>
     <p class="card-text">
                   <table class="table">
-        <tr><td width="300px"><img src="/static/images/about/experience1.png" width="290px"></td><td>
+        <tr><td width="400px"><img src="/static/images/about/icerc.png" width="400px"><BR>資訊學科中心參訪南投縣仁愛鄉曲冰數位機會中心(2011.7.28)</R></td><td>
       <table class="table">    
     <Tr><td>臺北市立南港國中數學教師(1996.8~1998.7)</td></Tr>        
     <Tr><td>臺北市立南港國中電腦教師(1998.8~1999.7)</td></Tr>      
     <Tr><td>臺北市立南港高中資訊教師(1999.7~迄今)</td></Tr>    
     <Tr><td>英特爾e教師計畫資深教師(2001.7~2008.6)</td></Tr>   	
-    <Tr><td>教育部高中資訊科技概論教科書審定委員(2006.8~2017.12)</td></Tr>    	
-    <Tr><td>教育部高中資訊學科中心種子教師(2005.2~2015.12)</td></Tr>    		
+    <Tr><td>教育部高中資訊學科中心種子教師(2005.2~2015.12)</td></Tr>           
+    <Tr><td>教育部高中資訊科技概論教科書審定委員(2006.8~2017.12)</td></Tr>    	 		
     <Tr><td>臺北市自由軟體桌面應用推動及發展小組輔導員(2008.4~2016.12)</td></Tr> 	
   </table>
           </td></tr></table>
         </p>                    
   </div>
-    
+
+  <div class="card-body">
+    <h5 class="card-title">文章</h5>
+    <p class="card-text">
+                  <table class="table">
+        <tr><td width="300px"><img src="/static/images/about/experience1.png" width="290px"></td><td>
+      <table class="table">    
+        <Tr><td>高慧君(2017)。程式教育！老師，您準備好了嗎？。翰林出版社文宣。<a href="/static/files/author/hanlin-jean.pdf" target="_blank">[PDF]</a></td></Tr>        
+        <Tr><td>高慧君、賴阿福(2017)。運用物理模擬動畫創作輔助高中生學習程式設計之研究，北京：北京師範大學. June 2-6, 2017。<BR><a href="/static/files/author/GCCCE2017-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2017-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
+    <Tr><td>高慧君(2016)。從 Scratch 到Raspberry Pi：中小學程式設計課程規畫，香港：香港教育學院. May 23-27, 2016。<a href="/static/files/author/GCCCE2016-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2016-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
+        <Tr><td>Wu, C.-C. & Kao H.-C. (2008). Streaming videos in peer assessment to support training pre-service teachers. Educational Technology & Society, 11(1), 45-55. (SSCI)<td></Tr>
+  </table>
+          </td></tr></table>
+        </p>                    
+  </div>
     
   <div class="card-body">
     <h5 class="card-title">著作</h5>
