--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -44,7 +44,7 @@
                   <table class="table">
         <tr><td width="300px"><img src="/static/images/about/experience1.png" width="290px"></td><td>
       <table class="table">    
-        <Tr><td>高慧君(2017)。程式教育！老師，您準備好了嗎？。翰林出版社文宣。<a href="/static/files/author/hanlin-jean.pdf" target="_blank">[PDF]</a></td></Tr>        
+        <Tr><td>高慧君(2017)。程式教育！老師，您準備好了嗎？。翰林出版社文宣。 <a href="/static/images/about/hanlin3.jpg">[PIC1]</a> <a href="/static/images/about/hanlin4.jpg">[PIC2]</a> </td></Tr>        
         <Tr><td>高慧君、賴阿福(2017)。運用物理模擬動畫創作輔助高中生學習程式設計之研究，北京：北京師範大學. June 2-6, 2017。<BR><a href="/static/files/author/GCCCE2017-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2017-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
     <Tr><td>高慧君(2016)。從 Scratch 到Raspberry Pi：中小學程式設計課程規畫，香港：香港教育學院. May 23-27, 2016。<a href="/static/files/author/GCCCE2016-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2016-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
         <Tr><td>Wu, C.-C. & Kao H.-C. (2008). Streaming videos in peer assessment to support training pre-service teachers. Educational Technology & Society, 11(1), 45-55. (SSCI)<td></Tr>
