--- a/templates/student/lesson/B06.html
+++ b/templates/student/lesson/B06.html
@@ -85,7 +85,7 @@
   </h1>
 修改三維運動拋物線的案例，加適當的程式碼，使得在任何時刻，球上都有一個箭頭(arrow)，並且此箭頭的長度正比於球的速度，且方向平行於球的速度方向，如下圖。
 <BR>
-  <img src="/static/lesson/B0802.png">
+  <img src="/static/lesson/vphysics/B0802.png">
 <BR>  
 提示：三維運動拋物線程式如下。
 
@@ -177,4 +177,4 @@
 <Br>
 執行結果
   <BR>
-<img src="/static/lesson/B0601.png">
+<img src="/static/lesson/vphysics/B0601.png">
