--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,10 @@ jQuery(function () {
 					 {% endif %}           
  					{% if user.is_superuser %}
 			<li><a href="/account/admin"><img src="/static/images/icon_admin.png"> 管理</a></li>
-		      {% endif %}			             					
+		      {% endif %}	
+      {% else %}
+      <li><a href="http://www.books.com.tw/products/0010703424" target="_blank"><img src="/static/images/icon_book.png">參考書</a></li>   
+      <li><a href="/account/author"><img src="/static/images/icon_master.png">作者</a></li>    
       {% endif %}
     </ul>  
     </div>
@@ -112,7 +115,7 @@ jQuery(function () {
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="copyright">
-		<p class="fl_left">Copyright &copy; All Rights Reserved <a href="/account/policies">使用條款</a></p>
+		<p class="fl_left">Copyright &copy; All Rights Reserved</p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>
 		Designed by <a href='http://www.freepik.com'>Freepik</a></p>
 		</p>
