--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -114,7 +114,7 @@
         <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
         <li><a href="/account/statics/zone">分區數據統計</a></li>
         <li><a href="/account/statics/login/">使用者登入統計</a></li>
-        <li><a href="http://www.books.com.tw/products/0010703424" target="_blank">參考圖書</a></li>           
+        <li><a href="/account/policies">使用條款</a></li>
         <li><a href="/account/contact">連絡我們</a></li>        
       </ul>
     </div>
