--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="card">
-  <h5 class="card-header">高慧君(臺北市立南港高中資訊教師)</h5>
+  <h5 class="card-header">高慧君</h5>
   <div class="card-body">
     <h5 class="card-title">學歷</h5>
     <p class="card-text">
