--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,13 @@ jQuery(function () {
 			<li><a href="/account/admin"><img src="/static/images/icon_admin.png"> 管理</a></li>
 		      {% endif %}	
       {% else %}
+      <li><A href="#"><img width=16 src="/static/images/icon_article.png"> 推薦</A></a>
+        <ul>
+          <li><a href="https://www.youtube.com/watch?v=4JhlfRAzVKY" target=_blank>怎麼樣成為一個高手</a></li>	
+          <li><a href="https://www.youtube.com/watch?v=s7wcbF8QiUQ" target=_blank>成功的要訣：恆毅力</a></li>			
+          <li><a href="https://www.youtube.com/watch?v=g9pgLqPzLBk" target=_blank>先別急著吃棉花糖</a></li>
+			  </ul>
+    </li>
       <li><a href="http://www.books.com.tw/products/0010703424" target="_blank"><img src="/static/images/icon_book.png">參考書</a></li>   
       <li><a href="/account/author"><img src="/static/images/icon_master.png">作者</a></li>    
       {% endif %}
