--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@ jQuery(function () {
           <li><a href="https://www.youtube.com/watch?v=4JhlfRAzVKY" target=_blank>怎麼樣成為一個高手</a></li>	
           <li><a href="https://www.youtube.com/watch?v=s7wcbF8QiUQ" target=_blank>成功的要訣：恆毅力</a></li>			
           <li><a href="https://www.youtube.com/watch?v=g9pgLqPzLBk" target=_blank>先別急著吃棉花糖</a></li>
+          <li><a href="https://www.gvm.com.tw/article.html?id=33811" target=_blank>程式、跨領域、終身學習</a></li>          
 			  </ul>
     </li>
       <li><a href="http://www.books.com.tw/products/0010703424" target="_blank"><img src="/static/images/icon_book.png">參考書</a></li>   
