--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -192,7 +192,7 @@ function MM_swapImage() { //v3.0
 {% elif subject_id == "B" %}
 <img src="/static/images/vphysics/vphysics.png">
 <BR><BR>
-<a href="/static/lesson/VPhysics高中課程.pdf" role="button" class="btn btn-info">石明豐教授編寫的課程文件(pdf,5.28MB)</a>
+<a href="/static/files/VPhysics.pdf" target="_blank" role="button" class="btn btn-info">石明豐教授編寫的課程文件(pdf,5.28MB)</a>
 <a href="http://vphysics.ntu.edu.tw" target=_blank role="button" class="btn btn-info">更多VPhysics課程</a>
 		<table style="border:0px; width:900px;">
   <tr>
