--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -141,7 +141,7 @@
 
 <div class="mySlides">
   <q>每個人都應該學習程式設計嗎？是的。就像每個人都應該學習數學或音樂、美術一樣；學習數學可以培養我們抽象思考、邏輯思維能力，學習音樂、美術可以培養我們藝術美感、創意表現能力，學習程式設計則可以培養我們運算思維（computational thinking）、運用電腦解決問題的能力。蘋果公司創辦人Steve Jobs認為每個人都應該學習程式設計，因為程式設計訓練我們如何思考，他認為程式設計應該屬於人文素養教育的一部分。</q>
-  <p class="author" style="text-align:center;">- 國立臺灣師範大學 資訊教育研究所 吳正己校長</p>
+  <p class="author" style="text-align:center;">- 國立臺灣師範大學 吳正己校長</p>
 </div>
   
 <div class="mySlides">
