--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -42,13 +42,14 @@
     <h5 class="card-title">文章</h5>
     <p class="card-text">
                   <table class="table">
-        <tr><td width="300px"><img src="/static/images/about/experience1.png" width="290px"></td><td>
+        <tr><td width="300px"><img src="/static/images/about/experience1.png" width="300px"><BR>參與國際會議(2016.5.23)</R></td><td>
       <table class="table">    
-        <Tr><td>高慧君(2017)。程式教育！老師，您準備好了嗎？。翰林出版社文宣。 <a href="/static/images/about/hanlin3.jpg" target="_blank">[PIC1]</a> <a href="/static/images/about/hanlin4.jpg" target="_blank">[PIC2]</a> </td></Tr>        
-        <Tr><td>高慧君、賴阿福(2017)。運用物理模擬動畫創作輔助高中生學習程式設計之研究，GCCCE 2017，北京：北京師範大學. June 2-6, 2017。 <a href="/static/files/author/GCCCE2017-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2017-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
-    <Tr><td>高慧君(2016)。從 Scratch 到Raspberry Pi：中小學程式設計課程規畫，GCCCE 2016，137-144，香港：香港教育學院. May 23-27, 2016。<a href="/static/files/author/GCCCE2016-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2016-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
+        <Tr><td>高慧君(2017)：程式教育！老師，您準備好了嗎？。翰林出版社文宣。 <a href="/static/images/about/hanlin3.jpg" target="_blank">[PIC1]</a> <a href="/static/images/about/hanlin4.jpg" target="_blank">[PIC2]</a> </td></Tr>        
+        <Tr><td>高慧君、賴阿福(2017)：運用物理模擬動畫創作輔助高中生學習程式設計之研究，GCCCE 2017，北京：北京師範大學. June 2-6, 2017。 <a href="/static/files/author/GCCCE2017-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2017-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
+    <Tr><td>高慧君(2016)：從 Scratch 到Raspberry Pi：中小學程式設計課程規畫，GCCCE 2016，137-144，香港：香港教育學院. May 23-27, 2016。<a href="/static/files/author/GCCCE2016-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2016-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
         <Tr><td>Wu, C.-C. & Kao H.-C. (2008). Streaming videos in peer assessment to support training pre-service teachers. Educational Technology & Society, 11(1), 45-55. (SSCI)<td></Tr>
-  </table>
+        <Tr><td>高慧君、吳正己（2002）：美國高中的先修大學電腦科學課程(APCS) 簡介。科學教育月刊，247，64-73。<a href="http://www.sec.ntnu.edu.tw/Monthly/91%28246-255%29/247/71%E7%BE%8E%E5%9C%8B%E9%AB%98%E4%B8%AD%E7%9A%84%E5%85%88%E4%BF%AE%E5%A4%A7%E5%AD%B8%E9%9B%BB%E8%85%A6%E7%A7%91%E5%AD%B8%E8%AA%B2%E7%A8%8B_apcs_%E7%B0%A1%E4%BB%8B.pdf" target="bloak">[PDF]</a><td></Tr>
+      </table>
           </td></tr></table>
         </p>                    
   </div>
