--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -145,8 +145,8 @@
 </div>
   
 <div class="mySlides">
-  <q>新經濟時代，電腦科學不再是選修科目，而是基礎能力，像讀、寫、算數一樣重要。</q>
-  <p class="author" style="text-align:center;">- 美國總統 歐巴馬</p>
+  <q>我們知道將來的產業絕大多數都會和資訊技術（IOT、AI、大數據、工業4.0、…）相關，而程式語言是資訊工具的基礎，如果能讓我們的學生更早具備程式設計的基礎，將會對台灣將來的產業，有重大的影響。此外，各個專業學門，不管是科學（如數學、物理、化學、生物…等）或是工程（如電機、資訊、機械…）在研究和技術發展上，都有很大的比例已經是利用程式來做模擬、計算、或設計，因此讓學生們提早理解程式在這些領域的用途，也會讓學生在大學或研究所時，減少進入這些學門的障礙。</q>
+  <p class="author" style="text-align:center;">- 國立臺灣大學 物理學系 石明豐教授</p>
 </div>
   
 <div class="mySlides">
