--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -65,7 +65,11 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
         <pre>{{work.code}}</pre>
         <br>
         <font color=black>執行結果：</font><BR>
-        <img width=880 src="/static/pic/{{student.id}}/{{work.id}}/run.jpg">
+        {% if lesson == "2" %}
+        <img width=880 src="/static/work/vphysics/{{student.id}}/{{index}}/{{work.id}}.jpg">
+        {% elif lesson == "3" %}
+        <img width=880 src="/static/work/euler/{{student.id}}/{{index}}/{{work.id}}.jpg">          
+        {% endif %}
         <form action="" enctype="multipart/form-data"  method="post">
             <table class="table" style="width:300px">
                 <tr><th><label for="id_score">分數:</label></th><td>{{form.score}}</td></tr>
