--- a/templates/student/submitB.html
+++ b/templates/student/submitB.html
@@ -107,7 +107,7 @@
             <a href="/student/work/show/{{lesson_id}}/{{index}}">觀看({{work_dict|hash_date:index}})</a>
           </td>
           {% endif %}
-          {% if lesson_id == "2" %}
+          {% if lesson_id == 2 %}
           <td>
             <a href="/student/work/answer/{{lesson_id}}/{{index}}">解答</a>
           </td>
