--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -76,8 +76,11 @@
                         <table class="table">
         <tr><td width="300px"><img src="/static/images/about/honor1.png" width="290px"></td><td>
 		<table class="table">    
-	<tr><td>臺北市106學年度優良教師</td></tr>  
+	<tr><td>臺北市106學年度優良教師</td></tr>      
 	<tr><td>指導學生參加臺北市103學年度機器人競賽榮獲高中職創意組第1,3名</td></tr>	
+	<tr><td>教育部100學年度教學卓越銀質獎：用愛看世界記錄片創作</td></tr>	      
+	<tr><td>教育部88學年度全國各級學校「校園網站」建置競賽高中組佳作</td></tr>	          
+  <tr><td>教育部85學年度WWW內容建置競賽佳作：台灣職業棒球棒浦抽水站</td></tr>	         
   </Table> 
           </td></tr></table>
     </p>
