--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -74,7 +74,7 @@
     <h5 class="card-title">榮譽</h5>
     <p class="card-text">
                         <table class="table">
-        <tr><td width="300px"><img src="/static/images/about/honor1.png" width="290px"></td><td>
+        <tr><td width="300px"><img src="/static/images/about/honor1.jpg" width="280px"></td><td>
 		<table class="table">    
 	<tr><td>臺北市106學年度優良教師</td></tr>      
 	<tr><td>指導學生參加臺北市103學年度機器人競賽榮獲高中職創意組第1,3名</td></tr>	
